correciones del video y du descripcion

--- a/codigo/css/style.css
+++ b/codigo/css/style.css
@@ -1220,3 +1220,9 @@ body.mobile-nav-active #mobile-nav-toggle {
 #footer .credits a {
   color: #FFFFFF;
 }
+
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+}
