--- a/codigo/css/style.css
+++ b/codigo/css/style.css
@@ -89,6 +89,51 @@ button.close {
   border: 0;
   -webkit-appearance: none; }
 
+  .jumbotron {
+    position: relative;
+  }
+  .span12 {
+    width: 1170px;
+  }
+  
+
+
+  @media (min-width: 768px) and (max-width: 980px) {
+    
+    /* Widen masthead and social buttons to fill body padding */
+    .jumbotron {
+      margin-top: -20px; /* Offset bottom margin on .navbar */
+    }
+    
+  }
+  @media (max-width: 767px) {
+    
+    /* Widen masthead and social buttons to fill body padding */
+    .jumbotron {
+      padding: 40px 20px;
+      margin-top:   -20px; /* Offset bottom margin on .navbar */
+      margin-right: -20px;
+      margin-left:  -20px;
+    }
+
+    .masthead h1 {
+      font-size: 90px;
+    }
+
+    .masthead h2 {
+      font-size: 40px;
+      line-height: 1;
+      letter-spacing: -2px;
+    }
+    .masthead p,
+    .masthead .btn {
+      font-size: 24px;
+    }
+
+    .hidden-phone {
+      display: none !important;
+    }
+  }
 .modal-open {
   overflow: hidden; }
 
