--- a/codigo/css/style.css
+++ b/codigo/css/style.css
@@ -478,10 +478,11 @@ button.close {
 --------------------------------------------------------------*/
 #intro {
   width: 100%;
-  height: 90vh;
-  position: relative;
-  background: url("../img/intro-carousel/2.jpg") no-repeat;
-  background-size: cover;
+  height: 500px;
+  background-image: url("../img/intro-carousel/2.jpg");
+  background-size: 100% 100%;
+ 
+
 }
 
 #intro .intro-content {
